--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "json-backend": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "axios": "^1.1.2",
     "core-js": "^3.8.3",
     "json-server": "^0.17.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
